--- a/slides.css
+++ b/slides.css
@@ -3,7 +3,7 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #363636;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -12,18 +12,24 @@
 * {box-sizing:border-box}
 
 .slideshow-container {
-	height: 40vh;
-	width:40vw;
+	height: 25vw;
+	max-width: 100%;
+	width:70vh;
 	box-shadow:0 8px 16px 0 rgba(0,0,0,0.6), 0 12px 40px 0 rgba(0,0,0,0.19);
 	position: relative;
 	margin: auto;
+	
 	background: rgba(25, 25, 25, 0.65);
 }
 
 .mySlides {
-  display: none;
-  max-width: 100%;
-  max-height: 100%;
+	position: relative;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	display: none;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .prev, .next {
@@ -55,7 +61,7 @@
 }
 
 .active, .dot:hover {
-  background-color: #363636;
+  background-color: #bbb;
 }
 
 .fade {
