--- a/style.css
+++ b/style.css
@@ -59,8 +59,13 @@ a {
 	min-width: 500px;
 	width: 80vw;
 	background: rgba(115, 115, 115, 0.65);
-	font-size: 2.3vh;
+	font-size: 24px;
 	color: #ffff00;
+}
+@media (max-width: 1000px) {
+      content {
+            font-size: 30px;
+       }
 }
 
 .header {
